fix styles - dark mode

--- a/Components/MainPage/Portfolio/Portfolio.module.css
+++ b/Components/MainPage/Portfolio/Portfolio.module.css
@@ -14,7 +14,6 @@
     align-items: center;
     flex-direction: column;
     position: relative;
-    margin: 60px 0 ;
     background-color: #fff;
 
 
