--- a/Components/MainPage/Portfolio/PortfolioSliderDesktop.module.css
+++ b/Components/MainPage/Portfolio/PortfolioSliderDesktop.module.css
@@ -8,6 +8,8 @@
   margin: 20px 0 20px 20px;
   overflow-x: hidden;
   overflow:hidden;
+  background-color: #fff;
+
 
 }
 .slider__carousel{
